changes GetMyStream
