# service/api/api-handler.go
@@ -11,11 +11,11 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.PUT("/user/:username", rt.wrap(rt.setMyUserName))
 	rt.router.GET("/user/:username/profile", rt.wrap(rt.getUserProfile))
 	rt.router.GET("/user/:username/id/:userid", rt.wrap(rt.getUsername))
+	rt.router.GET("/user/:username/stream", rt.wrap(rt.getUserFollowedPhotos))
 
 	rt.router.POST("/user/:username/photo", rt.wrap(rt.uploadPhoto))
 	rt.router.DELETE("/user/:username/photo/:photoid", rt.wrap(rt.deletePhoto))
 	rt.router.GET("/user/:username/photo", rt.wrap(rt.getUserPhotos))
-	rt.router.GET("/user/:username/photos", rt.wrap(rt.getUserFollowedPhotos))
 
 	rt.router.POST("/user/:username/ban", rt.wrap(rt.banUser))
 	rt.router.DELETE("/user/:username/ban/:banid", rt.wrap(rt.unbanUser))
